--- a/css/management.css
+++ b/css/management.css
@@ -32,97 +32,14 @@
     font-size: 14px;
     margin: 0 20px;
 }
-.management .manageCon .roleCon {
+.management .manageCon .userCon{display: none}
+.management .manageCon .userCon .item {
     overflow: hidden;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 15px 20px 30px;
-}
-.management .manageCon .roleCon .itemCon{
-    overflow: hidden;
-    width: 50%;
-}
-.management .manageCon .roleCon .itemCon .itemList{
-    overflow: hidden;
+    padding: 20px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-.management .manageCon .roleCon .item{
-    overflow: hidden;
-    width: 50%;
-}
-.management .manageCon .roleCon .itemCon .itemList .item{width: 100%}
-.management .manageCon .roleCon .item p{
-    overflow: hidden;
-    font-size: 14px;
-    text-align: center;
-    line-height: 20px;
-    margin: 10px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.management .manageCon .roleCon .item p img{display: inline-block;margin-left: 10px;width: 20px;cursor: pointer}
-.management .manageCon .roleCon .item ul{
-    overflow-x: hidden;
-    overflow-y: scroll;
-    min-height: 400px;
-    border: solid 1px #d8dce5;
-}
-.management .manageCon .roleCon .itemCon .itemList .item ul{min-height: 180px;}
-.management .manageCon .roleCon .item li{
-    overflow: hidden;
-    font-size: 14px;
-    height: 30px;
-    line-height: 30px;
-    padding: 0 5px;
-    border-bottom: solid 1px #d8dce5;
-}
-.management .manageCon .roleCon .item li:last-child{border-bottom: none}
-.management .manageCon .roleCon .item li:hover,.management .manageCon .roleCon .item li.checked{
-    background: #e1edff;
-}
-.management .manageCon .roleCon .itemPic{margin: 25px 20px 0}
-.management .manageCon .roleCon .itemPic img{width: 24px;cursor: pointer}
-.management .manageCon .roleCon .itemList1{
-    overflow: hidden;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 15px 0 0 0;
-    width: 100%;
-}
-.management .manageCon .roleCon .itemList1 span{
-    overflow: hidden;
-    font-size: 14px;
-    width: 150px;
-}
-.management .manageCon .roleCon .itemList1.account span{
-    margin-left: 50px;
-    width: 100px;
-}
-.management .manageCon .roleCon .itemList1 input{
-    overflow: hidden;
-    resize: none;
-    outline: none;
-    background: transparent;
-    padding: 10px;
-    color: #333;
-    cursor: pointer;
-    border: solid 1px #d8dce5;
-    margin-right: 20px;
-    min-width: 150px;
-}
-.management .manageCon .roleCon .itemList1 input.width{
-    min-width: 50px;
-    width: 50px;
-    text-align: center;
-}
-.management .manageCon .roleCon .itemList1 .checkList{margin: 15px 0;width: 100%}
-.management .manageCon .userCon .item{overflow: hidden;padding: 20px;}
 .management .manageCon .userCon .item span{
     overflow: hidden;
     font-size: 14px;
