--- a/css/evaluationObject.css
+++ b/css/evaluationObject.css
@@ -120,7 +120,7 @@
 .object .table ul li p.green{color: #36cfc9;}
 .object .table ul li p.red{color: #f00;}
 .object .table ul li a {
-    width: 100%;
+    /*width: 100%;*/
     justify-content: flex-start;
 }
 .object .table ul li img{
@@ -167,6 +167,7 @@
     width: 26%;
 }
 .object .table ul li .item .manipulate span{margin: 0 5px;}
+.object .table ul li .item .manipulate a{width: auto;padding: 5px 15px;}
 .object .table ul li ul{display: none;margin-top: -15px}
 .object .table ul li ul li {
     margin-left: 32px;
