--- a/css/management.css
+++ b/css/management.css
@@ -78,7 +78,7 @@
     border-bottom: 1px solid #d8dce5;
 }
 .management .manageCon .userCon .table table tr th{font-size: 14px;}
-.management .manageCon .userCon .table table tr th:first-child,.management .manageCon .userCon .table table tr td:first-child{width: 150px}
+.management .manageCon .userCon .table table tr th:first-child,.management .manageCon .userCon .table table tr td:first-child{width: 150px;text-align: center}
 .management .manageCon .userCon .table table tr td:first-child p{font-size: 12px}
 .management .manageCon .userCon .table table tr td span{
     overflow: hidden;
