--- a/css/login.css
+++ b/css/login.css
@@ -5,7 +5,7 @@
     height: 100%;
     position: absolute;
     width: 100%;
-    background: url("../images/template/bg.png") no-repeat center;
+    background: url("../images/template/login_bg.jpg") no-repeat center;
     background-size: 100% 100%;
 }
 #login{
