--- a/css/report.css
+++ b/css/report.css
@@ -10,23 +10,37 @@
     width: 100%;
     margin: 0 auto;
     display: table;
+    background: #eee;
 }
 .report .table table thead{
     background: #eee;
-    width: 100%;
-    padding-right: 20px;
+    width: 99%;
+    display: table;
+    overflow: hidden
 }
 .report .table table tbody{
     overflow-y: scroll;
+    display: block;
+    width: 100%;
+}
+.report .table table tbody tr {
+    width: 100%;
+    display: block;
 }
 .report .table table tr td,.report .table table tr th{
     font-size: 12px;
-    padding: 10px;
+    padding: 0 10px;
     text-align: center;
     border-bottom: 1px solid #fff;
     width: 20%;
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.report .table table tr td{border-bottom: 1px solid #d8dce5;}
+.report .table table tr td{border-bottom: 1px solid #d8dce5;background: #fff;}
 .report .table table tr th{font-size: 14px;}
 .report .table table tr td.red{
     color: #f00;
@@ -38,9 +52,11 @@
 }
 .report .table table tr th a,.report .table table tr td a {
     margin: 0 5px;
-    display: inline-block;
     color: #333;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .report .table table tr th span,.report .table table tr td span{margin: 0 5px;}
 .report .table table tr th img,.report .table table tr td img {
