--- a/css/index.css
+++ b/css/index.css
@@ -227,7 +227,8 @@
 }
 .index .rankCon .tabList ul li{
     overflow: hidden;
-    width: 25px;
+    /* width: 25px; */
+	width: 30%;
     font-size: 14px;
     padding: 10px 0;
     text-align: center;
